# actividad1-mlops-openrate-equipo0801

./: README.md  TEAM.md  dvc.yaml  mlflow.db  params.yaml  pyproject.toml
data/processed/: test.csv  train.csv
data/raw/: open_rate_data.csv
mlruns/1/models/m-8723a96c43c743ea98193e3d541b2c94/artifacts/: MLmodel  conda.yaml  model.skops  python_env.yaml  requirements.txt
models/: logistic_regression_model.joblib
src/: generate_data.py  prepare_data.py  train.py  train_random_forest.py
