[project]
name = "actividad1-mlops-openrate-equipo0801"
version = "0.1.0"
description = ""
authors = [
    {name = "Angelica Becerra",email = "ft.angelicabecerraforero@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (<3.0)",
    "numpy (<2.0)",
    "scikit-learn (>=1.9.0,<2.0.0)",
    "mlflow (>=3.14.0,<4.0.0)",
    "dvc (>=3.67.1,<4.0.0)",
    "joblib (>=1.5.3,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
